snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1.module.sha1
fdb4a9d96f72ca698560aee0e42962b13b23a688